--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,15 @@ before_install:
 
 script:
     - docker run -e CI=true bubionbreakfast/restaurant-app npm run test   
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-2"
+  app: "umbrella"
+  env: "docker-env"
+  bucket_name: "elasticbeanstalk-eu-west-2-890785154437"
+  bucket_path: "umbrella"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
