--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,11 +1,10 @@
 FROM node:alpine
-
-WORKDIR /app
-
-COPY . /app
-
+WORKDIR '/app'
+COPY package*.json ./
 RUN npm install
+COPY . .
+RUN npm run build
 
-EXPOSE 3000
-
-CMD ["npm", "start"]
+FROM nginx
+EXPOSE 80
+COPY --from=0 /app/build /usr/share/nginx/html
