--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,6 @@
 FROM node:alpine
-WORKDIR '/app'
-COPY package*.json ./
+WORKDIR /app
+COPY package*.json ./app
 RUN npm install
 COPY . ./app
 RUN npm run build
