--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,8 +1,8 @@
 FROM node:alpine as builder
 WORKDIR /app
-COPY package*.json ./app
+COPY package*.json /app
 RUN npm install
-COPY . ./app
+COPY . /app
 RUN npm run build
 
 FROM nginx
