--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ services:
 before_install:
     - docker build -t bubionbreakfast/restaurant-app -f Dockerfile.dev .    
 
-script:
-    - docker run -e CI=true bubionbreakfast/restaurant-app npm run test -- --coverage   
+# script:
+#     - docker run -e CI=true bubionbreakfast/restaurant-app npm run test -- --coverage   
 
 deploy:
   provider: elasticbeanstalk
